# Robot2019-Vision

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  pylintrc  pyproject.toml  setup.cfg  setup.py  vision.py
frc2019_vision/: __init__.py  __main__.py  __version__.py  args.py  core.py  environment.py  gui.py  networking.py  threads.py  vision.py
frc2019_vision/events/: __init__.py  base_events.py  get_events.py  handler.py  set_events.py
frc2019_vision/vision/: calibrate.py  color_range_finder.py  constants.py  gui.py  pipeline.py  prod_camera_calib.pickle  vision.py
scripts/: bootstrap.sh  calibrate.py  color_range_finder.py
tasks/: __init__.py
tasks/vendoring/: __init__.py
tests/: Client.py  UDP_Client.py
