[metadata]
long_description = file: README.md
license = MIT
license_file = LICENSE

[flake8]
exclude = .git,__pycache__,docs/,tasks/,frc2019_vision/vendor/,frc2019_vision/patched/,setup.py
max-line-length = 88

[isort]
atomic=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
include_trailing_comma=True
not_skip=__init__.py
known_first_party =
    frc2019_vision
skip_glob =
    **/vendor/**
    **/patched/**
